Add CrossEncoder and Integrate it into pipelines (#3196)
* Add CrossEncoder and Integrate it into pipelines

* Add CrossEncoder README.md

--- a/pipelines/rest_api/pipeline/semantic_search_custom.yaml
+++ b/pipelines/rest_api/pipeline/semantic_search_custom.yaml
@@ -20,7 +20,7 @@ components:    # define all the building-blocks for Pipeline
   - name: Ranker       # custom-name for the component; helpful for visualization & debugging
     type: ErnieRanker    # pipelines Class name for the component
     params:
-      model_name_or_path: rocketqa-nano-cross-encoder
+      model_name_or_path: rocketqa-nano-cross-encoder # cross encoder model path with model_config.json, vocab.txt etc
       top_k: 3
   - name: TextFileConverter
     type: TextConverter
