--- a/pipelines/requirements.txt
+++ b/pipelines/requirements.txt
@@ -15,6 +15,7 @@ faiss-cpu>=1.7.2
 opencv-python>=4.4
 opencv-contrib-python-headless
 python-multipart
+git+https://github.com/tvst/htbuilder.git
 st-annotated-text
 streamlit==1.9.0
 fastapi
