--- a/faster_tokenizer/faster_tokenizer/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(postprocessors)
 add_subdirectory(core)
 add_subdirectory(utils)
 # set the relative path of shared library
-if (NOT APPLE)
+if (UNIX)
 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
 endif()
 
