--- a/pipelines/rest_api/pipeline/semantic_search_milvus.yaml
+++ b/pipelines/rest_api/pipeline/semantic_search_milvus.yaml
@@ -2,25 +2,24 @@ version: '1.1.0'
 
 components:    # define all the building-blocks for Pipeline
   - name: DocumentStore
-    type: ElasticsearchDocumentStore  # consider using Milvus2DocumentStore or WeaviateDocumentStore for scaling to large number of documents
+    type: Milvus2DocumentStore  # consider using Milvus2DocumentStore or WeaviateDocumentStore for scaling to large number of documents
     params:
       host: localhost
-      port: 9200
-      index: dureader_robust_neural_search
-      embedding_dim: 256
+      port: 8530
+      index: dureader_index
+      embedding_dim: 312
   - name: Retriever
     type: DensePassageRetriever
     params:
       document_store: DocumentStore    # params can reference other components defined in the YAML
       top_k: 10
-      query_embedding_model: rocketqa-zh-base-query-encoder
-      params_path: checkpoints/model_40/model_state.pdparams
-      output_emb_size: 256
+      query_embedding_model: rocketqa-zh-nano-query-encoder
+      passage_embedding_model: rocketqa-zh-nano-para-encoder
       embed_title: False
   - name: Ranker       # custom-name for the component; helpful for visualization & debugging
     type: ErnieRanker    # pipelines Class name for the component
     params:
-      model_name_or_path: rocketqa-nano-cross-encoder # cross encoder model path with model_config.json, vocab.txt etc
+      model_name_or_path: rocketqa-nano-cross-encoder
       top_k: 3
   - name: TextFileConverter
     type: TextConverter
