[Bug Fix] update pypi workflow (#3626)
* update yaml

* update yaml scripts

* deploy dev version

* remove test pypi

--- a/ppdiffusers/Makefile
+++ b/ppdiffusers/Makefile
@@ -11,8 +11,7 @@ build:
 .PHONY: deploy
 deploy:
 	make deploy-version
-	# twine upload --skip-existing dist/*
-	twine upload --repository testpypi --skip-existing dist/*
+	twine upload --skip-existing dist/*
 
 .PHONY: deploy-version
 deploy-version:
