Fix FAQ docx ui upload parsing support and reformat docx.py (#3645)
* Fix FAQ docx ui upload parsing support and reformat docx.py

* Add more comments

* Optimize concatenate texts

--- a/pipelines/rest_api/pipeline/dense_faq.yaml
+++ b/pipelines/rest_api/pipeline/dense_faq.yaml
@@ -32,8 +32,9 @@ components:    # define all the building-blocks for Pipeline
   - name: Preprocessor
     type: PreProcessor
     params:
-      split_by: word
-      split_length: 1000
+      split_by: passage
+      split_respect_sentence_boundary: False
+      split_answers: True
   - name: FileTypeClassifier
     type: FileTypeClassifier
 
