--- a/fast_tokenizer/fast_tokenizer/pretokenizers/CMakeLists.txt
+++ b/fast_tokenizer/fast_tokenizer/pretokenizers/CMakeLists.txt
@@ -1,3 +1,3 @@
 cc_library(pretokenizers
-  SRCS pretokenizer.cc whitespace.cc bert.cc metaspace.cc sequence.cc
+  SRCS pretokenizer.cc whitespace.cc bert.cc metaspace.cc sequence.cc byte_level.cc split.cc
   DEPS normalizers core json utils)
