--- a/fast_tokenizer/fast_tokenizer/test/CMakeLists.txt
+++ b/fast_tokenizer/fast_tokenizer/test/CMakeLists.txt
@@ -20,10 +20,28 @@ cc_test(test_fast_wordpiece SRCS test_fast_wordpiece.cc DEPS models)
 # Download ernie vocab for test
 set(ERNIE_VOCAB_PATH ${CMAKE_CURRENT_BINARY_DIR}/ernie_vocab.txt)
 if (EXISTS ${ERNIE_VOCAB_PATH})
-message("The ${ERNIE_VOCAB_PATH} exists already.")
+  message("The ${ERNIE_VOCAB_PATH} exists already.")
 else()
-file(DOWNLOAD "https://bj.bcebos.com/paddlenlp/models/transformers/ernie/vocab.txt" ${ERNIE_VOCAB_PATH} SHOW_PROGRESS)
-message("Already download the vocab.txt of ernie to ${CMAKE_CURRENT_BINARY_DIR} for test.")
+  file(DOWNLOAD "https://bj.bcebos.com/paddlenlp/models/transformers/ernie/vocab.txt" ${ERNIE_VOCAB_PATH} SHOW_PROGRESS)
+  message("Already download the vocab.txt of ernie to ${CMAKE_CURRENT_BINARY_DIR} for test.")
+endif()
+
+# Download clip vocab and merge files
+set(CLIP_VOCAB_PATH ${CMAKE_CURRENT_BINARY_DIR}/clip_vocab.json)
+set(CLIP_MERGES_PATH ${CMAKE_CURRENT_BINARY_DIR}/clip_merges.txt)
+
+if (EXISTS ${CLIP_VOCAB_PATH})
+  message("The ${CLIP_VOCAB_PATH} exists already.")
+else()
+  file(DOWNLOAD "http://bj.bcebos.com/paddlenlp/models/community/openai/clip-vit-large-patch14/vocab.json" ${CLIP_VOCAB_PATH} SHOW_PROGRESS)
+  message("Already download the vocab.json of clip to ${CMAKE_CURRENT_BINARY_DIR} for test.")
+endif()
+
+if (EXISTS ${CLIP_MERGES_PATH})
+  message("The ${CLIP_MERGES_PATH} exists already.")
+else()
+  file(DOWNLOAD "http://bj.bcebos.com/paddlenlp/models/community/openai/clip-vit-large-patch14/merges.txt" ${CLIP_MERGES_PATH} SHOW_PROGRESS)
+  message("Already download the merges.txt of clip to ${CMAKE_CURRENT_BINARY_DIR} for test.")
 endif()
 
 # Test Tokenizer
@@ -33,7 +51,8 @@ cc_test(test_bert_tokenizer SRCS test_bert_tokenizer.cc DEPS normalizers pretoke
 cc_test(test_roberta_postprocessor SRCS test_roberta_postprocessor.cc DEPS normalizers pretokenizers models postprocessors tokenizer)
 
 if(NOT WITH_PYTHON)
-cc_test(test_ernie_fast_tokenizer SRCS test_ernie_fast_tokenizer.cc DEPS normalizers pretokenizers models postprocessors tokenizer core_tokenizers)
+  cc_test(test_ernie_fast_tokenizer SRCS test_ernie_fast_tokenizer.cc DEPS normalizers pretokenizers models postprocessors tokenizer core_tokenizers)
+  cc_test(test_clip_fast_tokenizer SRCS test_clip_fast_tokenizer.cc DEPS normalizers pretokenizers models postprocessors tokenizer core_tokenizers)
 endif()
 
 endif()
