--- a/pipelines/rest_api/pipeline/unsupervised_qa.yaml
+++ b/pipelines/rest_api/pipeline/unsupervised_qa.yaml
@@ -5,21 +5,21 @@ components:    # define all the building-blocks for Pipeline
     type: ElasticsearchDocumentStore  # consider using MilvusDocumentStore or WeaviateDocumentStore for scaling to large number of documents
     params:
       host: localhost
-      index: dureader_robust_query_encoder
+      port: 9200
+      index: my_data
+      embedding_dim: 312
   - name: Retriever
     type: DensePassageRetriever
     params:
       document_store: DocumentStore    # params can reference other components defined in the YAML
-      top_k: 5
-      query_embedding_model: rocketqa-zh-dureader-query-encoder
-      passage_embedding_model: rocketqa-zh-dureader-query-encoder
+      top_k: 10
+      query_embedding_model: rocketqa-zh-nano-query-encoder
+      passage_embedding_model: rocketqa-zh-nano-para-encoder
       embed_title: False
-  - name: Reader       # custom-name for the component; helpful for visualization & debugging
-    type: ErnieReader    # pipelines Class name for the component
+  - name: Ranker       # custom-name for the component; helpful for visualization & debugging
+    type: ErnieRanker    # pipelines Class name for the component
     params:
-      model_name_or_path: ernie-gram-zh-finetuned-dureader-robust
-      context_window_size: 1000
-      return_no_answer: true
+      model_name_or_path: rocketqa-nano-cross-encoder
       top_k: 3
   - name: TextFileConverter
     type: TextConverter
@@ -36,10 +36,29 @@ components:    # define all the building-blocks for Pipeline
   - name: Preprocessor
     type: PreProcessor
     params:
-      split_by: word
-      split_length: 1000
+      split_by: passage
+      split_respect_sentence_boundary: False
+      split_answers: True
   - name: FileTypeClassifier
     type: FileTypeClassifier
+  - name: AnswerExtractor
+    type: AnswerExtractor
+    params:
+      model: uie-base-answer-extractor
+      schema: ['答案']
+      position_prob: 0.01
+      max_answer_candidates: 3
+  - name: QuestionGenerator
+    type: QuestionGenerator
+    params:
+      model: unimo-text-1.0-question-generation
+      num_return_sequences: 2
+  - name: QAFilter
+    type: QAFilter
+    params:
+      model: uie-base-qa-filter
+      schema: ['答案']
+      position_prob: 0.1
 
 pipelines:
   - name: query    # a sample extractive-qa Pipeline
@@ -47,28 +66,8 @@ pipelines:
     nodes:
       - name: Retriever
         inputs: [Query]
-      - name: Reader
+      - name: Ranker
         inputs: [Retriever]
-  - name: indexing
-    type: Indexing
-    nodes:
-      - name: FileTypeClassifier
-        inputs: [File]
-      - name: TextFileConverter
-        inputs: [FileTypeClassifier.output_1]
-      - name: PDFFileConverter
-        inputs: [FileTypeClassifier.output_2]
-      - name: DocxFileConverter
-        inputs: [FileTypeClassifier.output_4]
-      - name: ImageFileConverter
-        inputs: [FileTypeClassifier.output_6]
-      - name: Preprocessor
-        inputs: [PDFFileConverter, TextFileConverter, DocxFileConverter, ImageFileConverter]
-      - name: Retriever
-        inputs: [Preprocessor]
-      - name: DocumentStore
-        inputs: [Retriever]
-        
   - name: indexing_qa_generating
     type: Indexing_qa_generating
     nodes:
@@ -96,3 +95,12 @@ pipelines:
         inputs: [QAFilterPostprocessor]
       - name: DocumentStore
         inputs: [Retriever]
+  - name: query_qa_pairs
+    type: Query
+    nodes:
+      - name: AnswerExtractor
+        inputs: [Query]
+      - name: QuestionGenerator
+        inputs: [AnswerExtractor]
+      - name: QAFilter
+        inputs: [QuestionGenerator]
