Add English semantic search of pipelines (#3718)
* Add English semantic search of pipelines

* Optimize semantic_search modeling.py

* Update syntax

* Update semantic search english examples

* Change parameter user_en to use_en

--- a/pipelines/rest_api/pipeline/semantic_search.yaml
+++ b/pipelines/rest_api/pipeline/semantic_search.yaml
@@ -38,7 +38,7 @@ components:    # define all the building-blocks for Pipeline
     type: FileTypeClassifier
 
 pipelines:
-  - name: query    # a sample extractive-qa Pipeline
+  - name: query  
     type: Query
     nodes:
       - name: Retriever
