--- a/pipelines/rest_api/pipeline/semantic_search_en.yaml
+++ b/pipelines/rest_api/pipeline/semantic_search_en.yaml
@@ -2,25 +2,27 @@ version: '1.1.0'
 
 components:    # define all the building-blocks for Pipeline
   - name: DocumentStore
-    type: ElasticsearchDocumentStore  # consider using MilvusDocumentStore or WeaviateDocumentStore for scaling to large number of documents
+    type: ElasticsearchDocumentStore  # consider using Milvus2DocumentStore or WeaviateDocumentStore for scaling to large number of documents
     params:
       host: localhost
       port: 9200
-      index: insurance
-      embedding_dim: 312
+      index: msmarco_query_encoder
+      embedding_dim: 768
   - name: Retriever
     type: DensePassageRetriever
     params:
       document_store: DocumentStore    # params can reference other components defined in the YAML
       top_k: 10
-      query_embedding_model: rocketqa-zh-nano-query-encoder
-      passage_embedding_model: rocketqa-zh-nano-para-encoder
+      query_embedding_model: rocketqav2-en-marco-query-encoder
+      passage_embedding_model: rocketqav2-en-marco-query-encoder
       embed_title: False
   - name: Ranker       # custom-name for the component; helpful for visualization & debugging
     type: ErnieRanker    # pipelines Class name for the component
     params:
-      model_name_or_path: rocketqa-nano-cross-encoder
+      model_name_or_path: rocketqav2-en-marco-cross-encoder
       top_k: 3
+      use_en: True,
+      reinitialize: True
   - name: TextFileConverter
     type: TextConverter
   - name: ImageFileConverter
@@ -32,9 +34,8 @@ components:    # define all the building-blocks for Pipeline
   - name: Preprocessor
     type: PreProcessor
     params:
-      split_by: passage
-      split_respect_sentence_boundary: False
-      split_answers: True
+      split_by: word
+      split_length: 1000
   - name: FileTypeClassifier
     type: FileTypeClassifier
 
