Add library name and version to hf_hub_download for better analytics (#3881)
* add lib name and version for hf hub download

* add hf hub version

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ datasets >= 2.0.0
 tqdm
 paddlefsl
 sentencepiece
-huggingface_hub
+huggingface_hub>=0.10.1
 paddle2onnx
 protobuf>=3.1.0, <=3.20.0
 visualdl
