--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -14,9 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r docs/requirements.txt
-          pip install -r ppdiffusers/requirements.txt
+          make install
 
   ppdiffusers:
     name: Pack
