--- a/pipelines/requirements.txt
+++ b/pipelines/requirements.txt
@@ -1,4 +1,4 @@
-paddlenlp
+paddlenlp>=2.4.3
 paddleocr
 requests
 pydantic
@@ -15,7 +15,6 @@ faiss-cpu>=1.7.2
 opencv-python>=4.4
 opencv-contrib-python-headless
 python-multipart
-htbuilder@git+https://github.com/tvst/htbuilder.git
 st-annotated-text
 click==8.0
 streamlit==1.9.0
@@ -23,4 +22,4 @@ fastapi
 uvicorn
 markdown
 numba
-pymilvus
+pymilvus>=2.1
