--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -25,6 +25,7 @@ jobs:
           stale-issue-label: "stale"
           stale-issue-message: "This issue is stale because it has been open for 60 days with no activity. 当前issue 60天内无活动，被标记为stale。"
           close-issue-message: "This issue was closed because it has been inactive for 30 days since being marked as stale. 当前issue 被标记为stale已有30天，即将关闭。"
+          exempt-issue-labels: 'triage,keep'
           days-before-pr-stale: 60
           days-before-pr-close: -1
           stale-pr-label: "stale"
