--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,6 +1,8 @@
 name: Close Stale Issues and Pull Requests
 
 on:
+  # Allow manual run via GitHub web or CLI
+  workflow_dispatch:
   schedule:
     # Run daily at midnight UTC
     - cron: 0 0 * * *
@@ -30,3 +32,4 @@ jobs:
           days-before-pr-close: -1
           stale-pr-label: "stale"
           stale-pr-message: "This Pull Request is stale because it has been open for 60 days with no activity. 当前Pull Request 60天内无活动，被标记为stale。"
+          operations-per-run: 100
