--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   Lint:
-    name: Install Environment
+    name: Lint
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
