--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - name: checkout develop
+        run: |
+          git fetch origin develop
+          git branch develop --track origin/develop
       - uses: actions/setup-python@v1
         with:
           python-version: 3.8
