Add PretrainedConfig to Bart/MBart/CodeGen/UNIMO/UnifiedTransformer (#3998)
* add config to bart and mbart

* add CodeGenConfig

* check code style

* check code style

* add UNIMOConfig

* add UnifiedTransformerConfig

* check code style and fix bugs

* fix conflict introduced by #4035

* using standard_config_map instead of attribute_map while rewrite get_config function

* add attribute num_choices to ErnieMConfig

* check all the attributes between loaded_config and config

* add CONFIG_NAME and CODEGEN_*

* fix pyproject

* use config.attr instead

* delete unnecessary arguments

* delete unnecessary arguments

* add type hints for forward and support embed_scale for bart/mbart

* fix typo of codegen

Co-authored-by: liu zhengxi <380185688@qq.com>
Co-authored-by: 骑马小猫 <1435130236@qq.com>
Co-authored-by: Sijun He <sijun.he@hotmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ exclude = ['.flake8']
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q --ignore tests/transformers/t5/test_modeling.py"
+addopts = "-ra -q"
 testpaths = [
     "tests/transformers",
     "tests/prompt",
