--- a/paddlenlp/ops/faster_transformer/src/CMakeLists.txt
+++ b/paddlenlp/ops/faster_transformer/src/CMakeLists.txt
@@ -8,6 +8,8 @@ add_definitions(-DPADDLE_CUDA)
 # Default is 1 in standard c++ when using gcc8.2
 add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
 
+add_definitions(-w)
+
 if(ON_INFER)
   add_definitions(-DPADDLE_ON_INFERENCE)
 
