--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
-      - name: Deploy Package
-        id: deploy-package
+      - name: Should Deploy
+        id: should-deploy
         env: 
           PACKAGE: ${{ inputs.package }}
         run: python scripts/should_deploy.py  --name $PACKAGE >> $GITHUB_OUTPUT
