[CI] Fix Unit Tests of Embeddings, Metrics, Ops and Utils (#4242)
* fix all tests

* missing embeddings tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ addopts = "-ra -q"
 testpaths = [
     "tests/data",
     "tests/datasets",
+    "tests/embeddings",
+    "tests/metrics",
+    "tests/ops",
     "tests/transformers",
     "tests/prompt",
     "tests/taskflow",
+    "tests/utils",
 ]
