AutoNLP TrainerBase and Text Classification (#3728)
* merging AutoNLP branch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,12 @@ exclude = ['.flake8']
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "-ra -q"
+pythonpath = ["."]
 testpaths = [
     "tests/data",
     "tests/datasets",
     "tests/embeddings",
+    "tests/experimental",
     "tests/metrics",
     "tests/ops",
     "tests/transformers",
