Fix taskflow unittest (#4366)
* add model_zoo tests

* fix taskflow unittest

* fix test_taskflow path

* add paddleslim

--- a/scripts/regression/requirements_ci.txt
+++ b/scripts/regression/requirements_ci.txt
@@ -1,3 +1,4 @@
+opencv-python==4.6.0.66
 regex
 attrdict==2.0.1
 PyYAML==5.4.1
@@ -25,4 +26,5 @@ parameterized
 scikit-learn
 cma
 paddleocr
+paddleslim
 fast_tokenizer_python
