add opencv-contrib-python (#4371)
* add opencv-contrib-python

* enable Faster gpt transformer

* add FT FG test

* fix fast path

* update

--- a/scripts/regression/requirements_ci.txt
+++ b/scripts/regression/requirements_ci.txt
@@ -1,4 +1,5 @@
 opencv-python==4.6.0.66
+opencv-contrib-python==4.6.0.66
 regex
 attrdict==2.0.1
 PyYAML==5.4.1
@@ -26,5 +27,5 @@ parameterized
 scikit-learn
 cma
 paddleocr
-paddleslim
 fast_tokenizer_python
+https://paddle-qa.bj.bcebos.com/PaddleSlim/paddleslim-0.0.0.dev0-py3-none-any.whl
