add sentence & character level data augmentation api (#4194)
* add_sentence_dataaug

* add_char_augmentation

* add_antonym

* add_file_augmentation

* add_test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ testpaths = [
     "tests/taskflow",
     "tests/utils",
     "model_zoo",
+    "tests/dataaug",
 ]
 python_files = [
     "test.py",
