--- a/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
+++ b/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
@@ -17,6 +17,12 @@ project(FasterTransformer LANGUAGES CXX CUDA)
 
 find_package(CUDA 10.1 REQUIRED)
 
+find_program(CCACHE_PROGRAM ccache)
+if(CCACHE_PROGRAM)
+  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+  set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+endif()
+
 option(BUILD_PD "Build in PaddlePaddle mode" ON)
 option(BUILD_GPT "Build project with gpt"    ON)
 option(BUILD_ENCODER "Build project with encoder"    ON)
