[New features] add version control by env (#4588)
* update version control

* fix typo

* update version control logic

* trigger cla

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
           TWINE_USERNAME: paddle-dev
           TWINE_PASSWORD: ${{ secrets.paddlenlp }}
           PACKAGE: ${{ inputs.package }}
+          PADDLENLP_STABLE_VERSION: "true"
         run: |
           make deploy-$PACKAGE
 
