--- a/fast_tokenizer/FastTokenizer.cmake.in
+++ b/fast_tokenizer/FastTokenizer.cmake.in
@@ -1,5 +1,16 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 3.12)
 
+set(USE_ABI0 @USE_ABI0@)
+
+if (NOT WIN32)
+    if (USE_ABI0)
+        add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
+    else()
+        add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
+    endif()
+endif()
+
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING
       "Choose the type of build, options are: Debug Release
