fix: 当使用了多路召回并且搜索字段设置了除content的其他字段，构建索引时其他字段也需要设置，例如：['content', 'name'] (#4987)

--- a/pipelines/rest_api/pipeline/multi_recall_semantic_search.yaml
+++ b/pipelines/rest_api/pipeline/multi_recall_semantic_search.yaml
@@ -8,7 +8,7 @@ components:    # define all the building-blocks for Pipeline
       port: 9200
       index: dureader_robust_query_encoder
       embedding_dim: 312
-      search_fields: ['content', 'meta']
+      search_fields: ['content', 'name']
   - name: BMRetriever
     type: BM25Retriever
     params:
