--- a/scripts/regression/requirements_ci.txt
+++ b/scripts/regression/requirements_ci.txt
@@ -29,6 +29,7 @@ cma
 paddleocr
 fast_tokenizer_python
 https://paddle-qa.bj.bcebos.com/PaddleSlim/paddleslim-0.0.0.dev0-py3-none-any.whl
+tool_helpers
 emoji
 ftfy
 unidecode
