[Paddle-pipelines] Add image to text retrieval (#5216)
* Add image to text retrieval

* Add wukong text demo dataset

--- a/pipelines/rest_api/pipeline/text_to_image_retrieval.yaml
+++ b/pipelines/rest_api/pipeline/text_to_image_retrieval.yaml
@@ -6,7 +6,7 @@ components:    # define all the building-blocks for Pipeline
     params:
       host: localhost
       port: 9200
-      index: wukong
+      index: wukong_test
       embedding_dim: 768
   - name: Retriever
     type: MultiModalRetriever
