--- a/model_zoo/gpt-3/ppfleetx/configs/nlp/gpt/auto/generation_gpt_13B_mp8.yaml
+++ b/model_zoo/gpt-3/ppfleetx/configs/nlp/gpt/auto/generation_gpt_13B_mp8.yaml
@@ -4,7 +4,7 @@ _base_: ./pretrain_gpt_base.yaml
 Engine:
   mix_precision:
     enable: True
-    dtype: "bfloat16"
+    dtype: "float16"
     level: "o2"
     scale_loss: 32768.0
     custom_black_list: ["reduce_sum", "c_softmax_with_cross_entropy", "elementwise_div", "where"]
