Run GitHub tests only when there is changes in `paddlenlp` or `tests` (#5674)
* less ci

* changes

* test examples

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,19 @@
 name: Test
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - 'paddlenlp/*'
+      - 'model_zoo/*'
+      - 'examples/*'
+      - 'tests/*'
+  pull_request:
+    paths:
+      - 'paddlenlp/*'
+      - 'model_zoo/*'
+      - 'examples/*'
+      - 'tests/*'
+
 
 jobs:
   Test:
