[GPT-3] add pre commit add rms norm (#6033)
* add pre commit add rms norm

* add pre-commit-config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ exclude = ['.flake8']
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q --ignore model_zoo/gpt-3/ppfleetx"
+addopts = "-ra -q --ignore model_zoo/gpt-3/"
 pythonpath = ["."]
 testpaths = [
     "tests/data",
