[AutoParallel] Update auto_model ref single model & Add 1F1B (#6049)
* align auto parallel with dynamic graph

* split auto_config auto_utils auto_env

* update entry file

* update yaml ref dynamic graph

* update .sh scripts

* rm FusedDropoutAdd

* rm comment

* fix import

--- a/model_zoo/gpt-3/ppfleetx/configs/nlp/gpt/auto/pretrain_gpt_base.yaml
+++ b/model_zoo/gpt-3/ppfleetx/configs/nlp/gpt/auto/pretrain_gpt_base.yaml
@@ -10,6 +10,8 @@ Global:
 Engine:
   max_steps: 500000
   num_train_epochs: 1
+  accumulate_steps:
+  logging_freq: 1
   eval_freq: 1
   eval_iters: 10
   test_iters:
@@ -20,7 +22,6 @@ Engine:
     scale_loss: 32768.0
     custom_black_list: ["reduce_sum", "c_softmax_with_cross_entropy", "elementwise_div"]
     custom_white_list: ["lookup_table", "lookup_table_v2"]
-    use_fp16_guard: False
   save_load:
     output_dir: ./output
     ckpt_dir:
@@ -30,6 +31,8 @@ Model:
   module: "GPTModuleAuto"
   name: "GPT"
   fuse_attn_qkv: False
+  scale_qk_by_layer_num: True
+  fused_softmax_with_triangular: True
 
 
 Data:
@@ -39,7 +42,7 @@ Data:
     dataset:
       name: GPTDataset
       input_dir: ./data/
-      split: [949, 50, 1]
+      split: [969, 30, 1]
       max_seq_len: 1024
 
   Eval:
@@ -48,7 +51,7 @@ Data:
     dataset:
       name: GPTDataset
       input_dir: ./data/
-      split: [949, 50, 1]
+      split: [969, 30, 1]
       max_seq_len: 1024
 
 
@@ -64,6 +67,7 @@ Optimizer:
     warmup_rate: 0.01
     max_lr: 5.0e-5
     min_lr: 1.0e-5
+    use_increments: True
   grad_clip:
     name: "ClipGradByGlobalNorm"
     clip_norm: 1.0
